Adds bundle activator header for the bundles with activators

--- a/org.inaetics.pubsub.discovery.etcd/pom.xml
+++ b/org.inaetics.pubsub.discovery.etcd/pom.xml
@@ -18,6 +18,14 @@
             <plugin>
                 <groupId>biz.aQute.bnd</groupId>
                 <artifactId>bnd-maven-plugin</artifactId>
+                <configuration>
+                    <bnd combine.self="override"><![CDATA[
+#Always export packages with a @Version annotation
+-exportcontents: ${packages;ANNOTATED;org.osgi.annotation.versioning.Version}
+Bundle-Activator: ${classes;IMPLEMENTS;org.osgi.framework.BundleActivator}
+]]>
+                    </bnd>
+                </configuration>
             </plugin>
         </plugins>
     </build>
