--- a/org.inaetics.pubsub.spi/pom.xml
+++ b/org.inaetics.pubsub.spi/pom.xml
@@ -18,6 +18,7 @@
             <plugin>
                 <groupId>biz.aQute.bnd</groupId>
                 <artifactId>bnd-maven-plugin</artifactId>
+                <version>${bnd-maven-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
