--- a/org.inaetics.pubsub.examples/pom.xml
+++ b/org.inaetics.pubsub.examples/pom.xml
@@ -9,8 +9,8 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>org.inaetics.pubsub.psa.zeromq</artifactId>
-    <name>INAETICS PubSub ZeroMQ PubSubAdmin</name>
+    <artifactId>org.inaetics.pubsub.examples</artifactId>
+    <name>INAETICS PubSub Examples</name>
 
     <build>
         <plugins>
@@ -27,6 +27,25 @@ Bundle-Activator: ${classes;IMPLEMENTS;org.osgi.framework.BundleActivator}
                     </bnd>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>biz.aQute.bnd</groupId>
+                <artifactId>bnd-export-maven-plugin</artifactId>
+                <version>${bnd-maven-plugin.version}</version>
+                <configuration>
+                    <failOnChanges>false</failOnChanges>
+                    <resolve>false</resolve>
+                    <bndruns>
+                        <bndrun>launch.pubsub.bndrun</bndrun>
+                    </bndruns>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>export</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -41,10 +60,6 @@ Bundle-Activator: ${classes;IMPLEMENTS;org.osgi.framework.BundleActivator}
             <artifactId>org.inaetics.pubsub.spi</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.zeromq</groupId>
-            <artifactId>jeromq</artifactId>
-            <version>0.4.3</version>
-        </dependency>
     </dependencies>
+
 </project>
