Configured mvn-clean-plugin to delete generated directories

--- a/org.inaetics.pubsub.spi/pom.xml
+++ b/org.inaetics.pubsub.spi/pom.xml
@@ -20,6 +20,22 @@
                 <artifactId>bnd-maven-plugin</artifactId>
                 <version>${bnd-maven-plugin.version}</version>
             </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>${maven-clean-plugin.version}</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>.</directory>
+                            <includes>
+                                <include>generated</include>
+                                <include>bin</include>
+                            </includes>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
