--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
         <bnd-maven-plugin.version>3.5.0</bnd-maven-plugin.version>
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+        <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
         <osgi.version>6.0.0</osgi.version>
     </properties>
 
