Resolved kafka dependencies
At the moment, the kafka jar in the users .m2 directory will be modified to contain a valid MANIFEST.MF. When Kafka will become OSGi compliant, this must be removed.

--- a/org.inaetics.pubsub.examples/pom.xml
+++ b/org.inaetics.pubsub.examples/pom.xml
@@ -35,7 +35,7 @@
                     <failOnChanges>false</failOnChanges>
                     <resolve>false</resolve>
                     <bndruns>
-                        <bndrun>launch.pubsub.bndrun</bndrun>
+                        <bndrun>launch.pubsub.kafka.bndrun</bndrun>
                     </bndruns>
                 </configuration>
                 <executions>
