--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.dependencymanager</artifactId>
-            <version>3.1.0</version>
+            <version>4.4.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
@@ -165,6 +165,18 @@
             <version>1.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.dependencymanager.annotation</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>biz.aQute.bndlib</artifactId>
+            <version>2.4.1</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Required for testing -->
         <dependency>
             <groupId>junit</groupId>
@@ -181,7 +193,7 @@
         <module>org.inaetics.pubsub.topologymanager</module>
         <module>org.inaetics.pubsub.discovery.etcd</module>
         <module>org.inaetics.pubsub.psa.kafka</module>
-        <!--<module>org.inaetics.pubsub.psa.zeromq</module>-->
+        <module>org.inaetics.pubsub.psa.zeromq</module>
         <module>org.inaetics.pubsub.serialization.json</module>
         <module>org.inaetics.pubsub.examples</module>
     </modules>
