--- a/org.inaetics.pubsub.deploy/pom.xml
+++ b/org.inaetics.pubsub.deploy/pom.xml
@@ -36,6 +36,7 @@
                     <resolve>false</resolve>
                     <bndruns>
                         <bndrun>launch.kafka.publisher.bndrun</bndrun>
+                        <bndrun>launch.kafka.subscriber.bndrun</bndrun>
                         <bndrun>launch.zmq.publisher.bndrun</bndrun>
                         <bndrun>launch.zmq.subscriber.bndrun</bndrun>
                     </bndruns>
