Working pub/sub example, tested with ZeroMQ admin

--- a/org.inaetics.pubsub.examples/pubsub/pom.xml
+++ b/org.inaetics.pubsub.examples/pubsub/pom.xml
@@ -47,6 +47,7 @@
     </build>
 
     <modules>
+        <module>common</module>
         <module>publisher</module>
         <module>subscriber</module>
     </modules>
