--- a/org.inaetics.pubsub.deploy/pom.xml
+++ b/org.inaetics.pubsub.deploy/pom.xml
@@ -106,13 +106,18 @@
         </dependency>
         <dependency>
             <groupId>org.inaetics.pubsub</groupId>
+            <artifactId>org.inaetics.pubsub.examples.pubsub.common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.inaetics.pubsub</groupId>
             <artifactId>org.inaetics.pubsub.examples.pubsub.publisher</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.inaetics.pubsub</groupId>
             <artifactId>org.inaetics.pubsub.examples.pubsub.subscriber</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
