--- a/org.inaetics.pubsub.examples/pubsub/common/pom.xml
+++ b/org.inaetics.pubsub.examples/pubsub/common/pom.xml
@@ -5,12 +5,12 @@
 
     <parent>
         <groupId>org.inaetics.pubsub</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>org.inaetics.pubsub.examples.pubsub</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>org.inaetics.pubsub.serialization.json</artifactId>
-    <name>INAETICS PubSub Json Serialization</name>
+    <artifactId>org.inaetics.pubsub.examples.pubsub.common</artifactId>
+    <name>INAETICS PubSub Examples - Pubsub Common</name>
 
     <build>
         <plugins>
@@ -22,8 +22,6 @@
                     <bnd combine.self="override"><![CDATA[
 #Always export packages with a @Version annotation
 -exportcontents: ${packages;ANNOTATED;org.osgi.annotation.versioning.Version}
-Bundle-Activator: ${classes;IMPLEMENTS;org.osgi.framework.BundleActivator}
-DynamicImport-Package: *
 ]]>
                     </bnd>
                 </configuration>
@@ -47,27 +45,4 @@ DynamicImport-Package: *
         </plugins>
     </build>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.inaetics.pubsub</groupId>
-            <artifactId>org.inaetics.pubsub.api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.inaetics.pubsub</groupId>
-            <artifactId>org.inaetics.pubsub.spi</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-    </dependencies>
 </project>
