--- a/org.inaetics.pubsub.deploy/pom.xml
+++ b/org.inaetics.pubsub.deploy/pom.xml
@@ -39,6 +39,8 @@
                         <bndrun>launch.kafka.subscriber.bndrun</bndrun>
                         <bndrun>launch.zmq.publisher.bndrun</bndrun>
                         <bndrun>launch.zmq.subscriber.bndrun</bndrun>
+                        <bndrun>launch.zmq.mp_publisher.bndrun</bndrun>
+                        <bndrun>launch.zmq.mp_subscriber.bndrun</bndrun>
                     </bndruns>
                 </configuration>
                 <executions>
@@ -104,6 +106,7 @@
             <artifactId>org.inaetics.pubsub.psa.zeromq</artifactId>
             <version>${project.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.inaetics.pubsub</groupId>
             <artifactId>org.inaetics.pubsub.examples.pubsub.common</artifactId>
@@ -117,6 +120,22 @@
         <dependency>
             <groupId>org.inaetics.pubsub</groupId>
             <artifactId>org.inaetics.pubsub.examples.pubsub.subscriber</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.inaetics.pubsub</groupId>
+            <artifactId>org.inaetics.pubsub.examples.mp_pubsub.common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.inaetics.pubsub</groupId>
+            <artifactId>org.inaetics.pubsub.examples.mp_pubsub.publisher</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.inaetics.pubsub</groupId>
+            <artifactId>org.inaetics.pubsub.examples.mp_pubsub.subscriber</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
