--- a/org.inaetics.pubsub.examples/mp_pubsub/pom.xml
+++ b/org.inaetics.pubsub.examples/mp_pubsub/pom.xml
@@ -5,12 +5,12 @@
 
     <parent>
         <groupId>org.inaetics.pubsub</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>org.inaetics.pubsub.examples</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>org.inaetics.pubsub.examples</artifactId>
-    <name>INAETICS PubSub Examples</name>
+    <artifactId>org.inaetics.pubsub.examples.mp_pubsub</artifactId>
+    <name>INAETICS PubSub Examples - MP Pubsub</name>
     <packaging>pom</packaging>
 
     <build>
@@ -46,17 +46,10 @@
         </plugins>
     </build>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.inaetics.pubsub</groupId>
-            <artifactId>org.inaetics.pubsub.api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-    </dependencies>
-
     <modules>
-        <module>pubsub</module>
-        <module>mp_pubsub</module>
+        <module>common</module>
+        <module>publisher</module>
+        <module>subscriber</module>
     </modules>
 
 </project>
