Improved ZeroMQ send method

--- a/org.inaetics.pubsub.psa.zeromq/pom.xml
+++ b/org.inaetics.pubsub.psa.zeromq/pom.xml
@@ -23,6 +23,7 @@
 #Always export packages with a @Version annotation
 -exportcontents: ${packages;ANNOTATED;org.osgi.annotation.versioning.Version}
 Bundle-Activator: ${classes;IMPLEMENTS;org.osgi.framework.BundleActivator}
+DynamicImport-Package: *
 ]]>
                     </bnd>
                 </configuration>
