--- a/pubsub.spi/pom.xml
+++ b/pubsub.spi/pom.xml
@@ -45,5 +45,11 @@
             <artifactId>org.inaetics.pubsub.api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
