--- a/pubsub.psa.zeromq/pom.xml
+++ b/pubsub.psa.zeromq/pom.xml
@@ -17,9 +17,8 @@
             <plugin>
                 <groupId>biz.aQute.bnd</groupId>
                 <artifactId>bnd-maven-plugin</artifactId>
-                <version>${bnd-maven-plugin.version}</version>
                 <configuration>
-                    <bnd combine.self="override"><![CDATA[
+                    <bnd combine.self="append"><![CDATA[
 #Always export packages with a @Version annotation
 -exportcontents: ${packages;ANNOTATED;org.osgi.annotation.versioning.Version}
 Bundle-Activator: ${classes;IMPLEMENTS;org.osgi.framework.BundleActivator}
@@ -30,7 +29,6 @@ DynamicImport-Package: *
             </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>${maven-clean-plugin.version}</version>
                 <configuration>
                     <filesets>
                         <fileset>
