--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -108,6 +108,15 @@
             <artifactId>org.apache.felix.log</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
